fix: adjust z-index values for maplibregl controls to improve layering consistency

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -55,23 +55,23 @@ body {
 }
 
 .maplibregl-control-container {
-  @apply z-[50000]!;
+  @apply z-[40000]!;
 }
 
 .maplibregl-ctrl-bottom-left {
-  @apply z-[50000]!;
+  @apply z-[40000]!;
 }
 
 .maplibregl-ctrl-bottom-right {
-  @apply z-[50000]!;
+  @apply z-[40000]!;
 }
 
 .maplibregl-ctrl-top-left {
-  @apply z-[50000]!;
+  @apply z-[40000]!;
 }
 
 .maplibregl-ctrl-top-right {
-  @apply z-[50000]!;
+  @apply z-[40000]!;
 }
 
 .maplibregl-ctrl-group {
